--- a/src/isaac_ros_nvblox/nvblox_examples/nvblox_examples_bringup/config/nav2/nav2_realsense.yaml
+++ b/src/isaac_ros_nvblox/nvblox_examples/nvblox_examples_bringup/config/nav2/nav2_realsense.yaml
@@ -20,7 +20,7 @@
 bt_navigator:
   ros__parameters:
     use_sim_time: False
-    global_frame: odom
+    global_frame: map
     robot_base_frame: base_link
     odom_topic: /odom
     bt_loop_duration: 20
@@ -93,8 +93,8 @@ controller_server:
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5
-      movement_time_allowance: 10.0
+      required_movement_radius: 0.2
+      movement_time_allowance: 15.0
     # Goal checker parameters
     general_goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
@@ -107,29 +107,29 @@ controller_server:
       debug_trajectory_details: True
       min_vel_x: 0.0
       min_vel_y: 0.0
-      max_vel_x: 2.0
+      max_vel_x: 0.22
       max_vel_y: 0.0
       max_vel_theta: 1.0
       min_speed_xy: 0.0
-      max_speed_xy: 2.0
+      max_speed_xy: 0.22
       min_speed_theta: 0.0
       # Add high threshold velocity for turtlebot 3 issue.
       # https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues/75
-      acc_lim_x: 1.0
+      acc_lim_x: 2.5
       acc_lim_y: 0.0
-      acc_lim_theta: 1.0
-      decel_lim_x: -1.0
+      acc_lim_theta: 3.2
+      decel_lim_x: -2.5
       decel_lim_y: 0.0
-      decel_lim_theta: -1.0
+      decel_lim_theta: -3.2
       vx_samples: 30
       vy_samples: 10
       vtheta_samples: 20
-      sim_time: 1.4
+      sim_time: 1.0
       linear_granularity: 0.05
-      angular_granularity: 0.025
+      angular_granularity: 0.05
       transform_tolerance: 0.2
       xy_goal_tolerance: 0.25
-      trans_stopped_velocity: 0.25
+      trans_stopped_velocity: 0.01
       short_circuit_trajectory_evaluation: True
       stateful: True
       critics: ["RotateToGoal", "Oscillation", "BaseObstacle", "GoalAlign", "PathAlign", "PathDist", "GoalDist"]
@@ -141,8 +141,8 @@ controller_server:
       PathDist.scale: 32.0
       GoalDist.scale: 24.0
       RotateToGoal.scale: 32.0
-      RotateToGoal.slowing_factor: 1.0
-      RotateToGoal.lookahead_time: -1.0
+      RotateToGoal.slowing_factor: 0.8
+      RotateToGoal.lookahead_time: 1.0
 
 # Update velocity smoother default params to match our controller server config
 # https://navigation.ros.org/configuration/packages/configuring-velocity-smoother.html
@@ -150,13 +150,13 @@ velocity_smoother:
   ros__parameters:
     smoothing_frequency: 20.0
     scale_velocities: false
-    feedback: "OPEN_LOOP"
-    max_velocity: [1.0, 0.0, 2.0]
-    min_velocity: [0.0, 0.0, -2.0]
+    feedback: "ODOMETRY"
+    max_velocity: [0.22, 0.0, 2.84]
+    min_velocity: [-0.22, 0.0, -2.84]
     deadband_velocity: [0.0, 0.0, 0.0]
     velocity_timeout: 1.0
-    max_accel: [1.0, 0.0, 2.0]
-    max_decel: [-1.0, 0.0, -2.0]
+    max_accel: [2.5, 0.0, 3.2]
+    max_decel: [-2.5, 0.0, -3.2]
     odom_topic: "odom"
     odom_duration: 0.1
 
@@ -176,7 +176,7 @@ local_costmap:
       width: 10
       height: 10
       resolution: 0.05
-      robot_radius: 0.1
+      robot_radius: 0.05
       plugins: ["nvblox_base_layer", "nvblox_human_layer"]
       nvblox_base_layer:
         plugin: "nvblox::nav2::NvbloxCostmapLayer"
@@ -184,11 +184,12 @@ local_costmap:
         max_obstacle_distance: 1.0
         inflation_distance: 0.4
         nvblox_map_slice_topic: "/nvblox_node/static_map_slice"
+        convert_to_binary_costmap: True
       nvblox_human_layer:
         plugin: "nvblox::nav2::NvbloxCostmapLayer"
         enabled: True
         max_obstacle_distance: 1.0
-        inflation_distance: 0.4
+        inflation_distance: 0.1
         nvblox_map_slice_topic: "/nvblox_human_node/human_map_slice"
       always_send_full_costmap: True
   local_costmap_client:
@@ -203,7 +204,7 @@ global_costmap:
     ros__parameters:
       update_frequency: 10.0
       publish_frequency: 10.0
-      global_frame: odom
+      global_frame: map
       robot_base_frame: base_link
       use_sim_time: False
       rolling_window: True
@@ -214,17 +215,19 @@ global_costmap:
       origin_x: -100.0
       origin_y: -100.0
       plugins: ["nvblox_base_layer", "nvblox_human_layer"]
+      track_unknown_space: true
       nvblox_base_layer:
         plugin: "nvblox::nav2::NvbloxCostmapLayer"
         enabled: True
         max_obstacle_distance: 1.0
-        inflation_distance: 0.4
+        inflation_distance: 0.3
         nvblox_map_slice_topic: "/nvblox_node/static_map_slice"
+        convert_to_binary_costmap: True
       nvblox_human_layer:
         plugin: "nvblox::nav2::NvbloxCostmapLayer" 
         enabled: True
         max_obstacle_distance: 1.0
-        inflation_distance: 0.4
+        inflation_distance: 0.1
         nvblox_map_slice_topic: "/nvblox_human_node/human_map_slice"
       always_send_full_costmap: True
   global_costmap_client:
@@ -242,7 +245,7 @@ planner_server:
     GridBased:
       plugin: "nav2_navfn_planner/NavfnPlanner"
       tolerance: 0.5
-      use_astar: false
+      use_astar: true
       allow_unknown: true
 
 planner_server_rclcpp_node:
