--- a/src/isaac_ros_nvblox/nvblox_examples/nvblox_examples_bringup/config/nvblox/specializations/nvblox_realsense.yaml
+++ b/src/isaac_ros_nvblox/nvblox_examples/nvblox_examples_bringup/config/nvblox/specializations/nvblox_realsense.yaml
@@ -5,17 +5,21 @@
     # QoS settings
     input_qos: "SENSOR_DATA"
     # Map clearing settings
-    map_clearing_frame_id: "camera0_link"
+    map_clearing_frame_id: "base_link"
     # Rviz visualization
-    esdf_slice_bounds_visualization_attachment_frame_id: "camera0_link"
+    esdf_slice_bounds_visualization_attachment_frame_id: "base_link"
 
     static_mapper:
-      esdf_slice_height: 0.0
       # Expected to be tuned by users. Slice height depends on realsense mounting.
-      esdf_slice_min_height: -0.1
-      esdf_slice_max_height: 0.3
+      esdf_slice_min_height: 0.1  # 2 cm above the ground
+      esdf_slice_max_height: 0.3     # covers obstacles up to 25 cm high
+      esdf_slice_height: 0.1         # slice visualization plane (10 cm)
+      # do_depth_preprocessing: True
+      # depth_preprocessing_num_dilations: 1
 
     dynamic_mapper:
       esdf_slice_height: 0.0
-      esdf_slice_min_height: -0.1
+      esdf_slice_min_height: -0.3
       esdf_slice_max_height: 0.3
+      # do_depth_preprocessing: True
+      # depth_preprocessing_num_dilations: 1
