--- a/src/isaac_ros_nvblox/nvblox_examples/nvblox_examples_bringup/config/nvblox/nvblox_base.yaml
+++ b/src/isaac_ros_nvblox/nvblox_examples/nvblox_examples_bringup/config/nvblox/nvblox_base.yaml
@@ -3,7 +3,7 @@
     # cuda stream setting
     cuda_stream_type: 1  # 0: cuda default stream, 1: blocking async stream, 2: non blocking async stream, 3: per-thread default stream.
     # miscellaneous
-    voxel_size: 0.05
+    voxel_size: 0.02
     num_cameras: 1
     use_tf_transforms: true
     mapping_type: "static_tsdf"  # ["static_tsdf", "static_occupancy"]
@@ -37,7 +37,7 @@
     # depth settings
     use_depth: true
     # lidar settings
-    use_lidar: true
+    use_lidar: false
     lidar_width: 1800
     lidar_height: 31
     lidar_min_valid_range_m: 0.1
